--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "prepublish": "npm run build"
   },
   "dependencies": {
-    "express": "4.11.0",
-    "lowdb": "0.6.1",
-    "recursive-search": "1.0.1"
+    "express": "^4.11.0",
+    "lowdb": "^0.6.1",
+    "request": "^2.53.0",
+    "async": "^0.9.0",
+    "jsdom": "^3.1.1",
+    "xmldom": "^0.1.19",
+    "recursive-search": "^1.0.1"
   },
   "devDependencies": {
     "browserify": "2",
