--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "",
   "version": "0.0.1",
-  "description": "Matching debugging gui",
+  "description": "Matching debugging GUI",
   "main": "src/matching.js",
   "scripts": {
     "test": "jshint src",
@@ -13,16 +13,14 @@
     "express": "^4.11.0",
     "jsdom": "^3.1.1",
     "lowdb": "^0.6.1",
-    "leaflet": "^0.7.3",
-    "mapbox.js": "^2.1.5",
     "osrm-client": "^0.0.2",
     "polyline": "^0.0.3",
     "recursive-search": "^1.0.1",
     "request": "^2.53.0",
-    "xmldom": "^0.1.19",
-    "leaflet-editinosm": "^0.2.1"
+    "xmldom": "^0.1.19"
   },
   "devDependencies": {
+    "bower": "^1.3.12",
     "browserify": "2",
     "jshint": "2"
   },
