--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "async": "^0.9.0",
+    "csv2geojson": "git://github.com/mapbox/csv2geojson.git#58207fb06f48513947fcd39cee30cea5fde40bad",
     "express": "^4.11.0",
     "jsdom": "^3.1.1",
     "lowdb": "^0.6.1",
@@ -21,6 +22,7 @@
     "xmldom": "^0.1.19"
   },
   "devDependencies": {
+    "brfs": "^1.3.0",
     "bower": "^1.3.12",
     "browserify": "2",
     "jshint": "2"
