--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "async": "^0.9.0",
-    "csv2geojson": "git://github.com/mapbox/csv2geojson.git#58207fb06f48513947fcd39cee30cea5fde40bad",
+    "csv2geojson": "^4.0.0",
     "express": "^4.11.0",
     "jsdom": "^3.1.1",
     "lowdb": "^0.6.1",
