--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.11.0",
     "jsdom": "^3.1.1",
     "lowdb": "^0.6.1",
-    "osrm-client": "^0.0.3",
+    "osrm-client": "^0.0.4",
+    "osrm": "git://github.com/Project-OSRM/node-osrm.git#6fa10f4d5193c8b8a0cbe3d1f748cf1d2ae06df1",
     "polyline": "^0.0.3",
     "recursive-search": "^1.0.1",
     "regenbogen": "^1.0.3",
