Move frontend code to separate directory

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Matching debugging GUI",
   "main": "src/matching.js",
   "scripts": {
-    "test": "jshint src",
-    "build": "browserify -d src/matching.js -s osrm.matching > dist/osrm.matching.js && browserify -d src/classify.js -s osrm.classify > dist/osrm.classify.js",
+    "build-matching": "browserify -d src/frontend/matching.js -s osrm.matching > dist/osrm.matching.js",
+    "build-classify": "browserify -d src/frontend/classify.js -s osrm.classify > dist/osrm.classify.js",
+    "build": "npm run build-matching && npm run build-classify",
     "prepublish": "npm run build"
   },
   "dependencies": {
