--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "express": "^4.11.0",
     "jsdom": "^3.1.2",
     "lowdb": "^0.6.1",
-    "osrm": "git://github.com/Project-OSRM/node-osrm.git#6fa10f4d5193c8b8a0cbe3d1f748cf1d2ae06df1",
-    "osrm-client": "^0.0.4",
+    "osrm": "git://github.com/Project-OSRM/node-osrm.git#2134b6692bc39a9c535c6d0e8ff32aa4f0d97a05",
+    "osrm-client": "0.0.5",
     "polyline": "^0.0.3",
     "recursive-search": "^1.0.1",
     "regenbogen": "^1.0.3",
