--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "async": "^0.9.0",
+    "browserify": "^9.0.3",
     "csv2geojson": "^4.0.0",
     "express": "^4.11.0",
     "jsdom": "^3.1.2",
