--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "async": "^0.9.0",
-    "browserify": "^9.0.3",
     "browser-request": "^0.3.3",
+    "browserify": "^9.0.3",
     "csv2geojson": "^4.0.0",
     "express": "^4.11.0",
     "jsdom": "^3.1.2",
@@ -23,6 +23,7 @@
     "recursive-search": "^1.0.1",
     "regenbogen": "^1.0.3",
     "request": "^2.54.0",
+    "sqlite3": "^3.0.5",
     "turf": "^2.0.0",
     "xmldom": "^0.1.19"
   },
