--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.11.0",
     "jsdom": "^3.1.2",
     "lowdb": "^0.6.1",
-    "osrm": "git://github.com/Project-OSRM/node-osrm.git#2134b6692bc39a9c535c6d0e8ff32aa4f0d97a05",
+    "moment": "^2.9.0",
+    "osrm": "git://github.com/Project-OSRM/node-osrm.git#dc53afcbd1e0b58700c4aeab62e149b6250127e4",
     "osrm-client": "0.0.9",
     "polyline": "^0.0.3",
     "recursive-search": "^1.0.1",
