--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "leaflet": "~0.7.3",
     "mapbox.js": "~2.1.5",
     "Leaflet.EditInOSM": "https://github.com/yohanboniface/Leaflet.EditInOSM.git#~0.2.1",
+    "leaflet.editable": "~0.6.2",
     "togeojson": "~0.11.0"
   }
 }
