--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "async": "^0.9.0",
+    "body-parser": "^1.12.4",
     "browser-request": "^0.3.3",
     "browserify": "^9.0.3",
     "csv2geojson": "^4.0.0",
